vlib/v/checker/tests/struct_field_init_with_void_expr_err.out
vlib/v/checker/tests/struct_field_init_with_void_expr_err.vv:19:3: error: cannot assign `void` expression to field `execute`
   17 |         name: 'add'
   18 |         description: 'Add something.'
   19 |         execute: app.test_func()
      |         ~~~~~~~~~~~~~~~~~~~~~~~~
   20 |     }
   21 |
